--- a/src/components/Home/styles/Home.css
+++ b/src/components/Home/styles/Home.css
@@ -1,12 +1,19 @@
 .wrapp{
     display: flex;
+    padding: 4%;
 }
+
 
 .wrapp-buttons{
     display: flex;
-    padding-left: 8%;
-    padding-right: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
     flex-direction: column;
+    width: 11%;
+    max-height: 171px;
+    border-right: 3px #eeeeee solid;
+    border-bottom: 3px #eeeeee solid;
+    border-radius: 0px 0px 30px 0px;
 }
 
 .button-custon{
@@ -28,3 +35,155 @@
 .container-button{
     padding-bottom: 27%;
 }
+
+.title-lisTodo{
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.wrapptitle-list{
+    padding-bottom: 2%;
+}
+
+/*MEDIA QUERY TABLET*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  
+    .wrapp {
+        display: flex;
+        padding: 4%;
+        flex-direction: column;
+    }
+    
+    .wrapp-buttons{
+        display: flex;
+    justify-content: space-around;
+    }
+
+    .responsive-buttons{
+        width: unset !important;
+        flex-direction: unset !important;
+        border-right: 0px #eeeeee solid !important;
+        border-bottom: 0px #eeeeee solid !important;
+        border-radius: unset !important;
+    }
+    
+    .container-button{
+        width: 16%;
+        padding-bottom: 3%;
+    }
+    
+  }
+
+
+  @media (min-width: 481px) and (max-width: 767px) {
+  
+    .wrapp {
+        display: flex;
+        padding: 4%;
+        flex-direction: column;
+    }
+    
+    .wrapp-buttons{
+        display: flex;
+    justify-content: space-around;
+    }
+    
+    .responsive-buttons{
+        width: unset !important;
+        flex-direction: unset !important;
+        border-right: 0px #eeeeee solid !important;
+        border-bottom: 0px #eeeeee solid !important;
+        border-radius: unset !important;
+    }
+
+    .container-button{
+        width: 16%;
+        padding-bottom: 3%;
+    }
+    
+  }
+
+  @media (min-width: 768px) and (max-width: 1024px) {
+  
+        .wrapp {
+        display: flex;
+        padding: 4%;
+        flex-direction: column;
+    }
+    
+    .wrapp-buttons{
+        display: flex;
+    justify-content: space-around;
+    }
+
+    .responsive-buttons{
+        width: unset !important;
+        flex-direction: unset !important;
+        border-right: 0px #eeeeee solid !important;
+        border-bottom: 0px #eeeeee solid !important;
+        border-radius: unset !important;
+    }
+    
+    .container-button{
+        width: 16%;
+        padding-bottom: 3%;
+    }
+    
+  }
+
+  @media (min-width: 481px) and (max-width: 767px) {
+  
+    .wrapp {
+        display: flex;
+        padding: 4%;
+        flex-direction: column;
+    }
+    
+    .wrapp-buttons{
+        display: flex;
+    justify-content: space-around;
+    }
+
+    .responsive-buttons{
+        width: unset !important;
+        flex-direction: unset !important;
+        border-right: 0px #eeeeee solid !important;
+        border-bottom: 0px #eeeeee solid !important;
+        border-radius: unset !important;
+    }
+    
+    .container-button{
+        width: 16%;
+        padding-bottom: 3%;
+    }
+    
+  }
+
+  @media (min-width: 320px) and (max-width: 480px) {
+  
+    .wrapp {
+        display: flex;
+        padding: 4%;
+        flex-direction: column;
+    }
+    
+    .wrapp-buttons{
+        display: flex;
+    justify-content: space-around;
+    }
+
+    .responsive-buttons{
+        width: unset !important;
+        flex-direction: unset !important;
+        border-right: 0px #eeeeee solid !important;
+        border-bottom: 0px #eeeeee solid !important;
+        border-radius: unset !important;
+    }
+    
+    .container-button{
+        width: 16%;
+        padding-bottom: 3%;
+    }
+    
+  }
