Include data service to the project

--- a/src/components/Home/styles/ItemTodo.css
+++ b/src/components/Home/styles/ItemTodo.css
@@ -1,12 +1,3 @@
-/* .card-todo{
-    border-radius: 25px;
-    margin: 1%;
-    max-width: 265px;
-    max-height: 317px;
-    padding: 2%;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-} */
-
 .card-todo{
     display: grid;
     margin: 1%;
@@ -56,6 +47,10 @@ h2{
 
 .status{
     width: 77%;
+}
+
+.italic-status{
+    font-style: italic;
 }
 
 .checkStyle{
