--- a/src/components/Home/styles/Home.css
+++ b/src/components/Home/styles/Home.css
@@ -18,17 +18,14 @@
 
 .button-custon{
     width: 100%;
-    background: #ff80b0;
-    /* background: #ececec; */
+
+    cursor: pointer;
     border-radius: 50px;
     outline: none;
     border: 0px;
     padding-top: 7%;
-    /* padding-left: 20%;
-    padding-right: 20%; */
     padding-bottom: 7%;
-    color: black;
-    /* color: #ff80b0; */
+
     font-weight: bold
 }
 
@@ -185,5 +182,5 @@
         width: 16%;
         padding-bottom: 3%;
     }
-    
+
   }
